--- a/MiseEnPage.css
+++ b/MiseEnPage.css
@@ -10,7 +10,7 @@ div.Back {
     margin-bottom : -20px;  
 }
 a.BackToIndex {
-    color : #4d4dff;
+    color : #4a4740;
     font-style : italic;
 }
 
